frontend/styles/global.scss
@import './reset';
@import './typography';

html {
	font-size: 10px;
	overflow-x: hidden;

	@media screen and (max-width: $break-large) {
		font-size: 9px;
	}

	@media screen and (max-width: $break-medium) {
		font-size: 8px;
	}
}

body {
	color: $bleuFonce;
}

body:not(.post) {
	overflow-x: hidden;
}

// code highlight
pre.wp-block-code {
	display: flex;
	flex-direction: column;

	> span.title {
		opacity: 0.5;
		margin-bottom: 1rem;
	}

	code {
		.token.variable {
			color: var(--foreground);
		}
	}
}

#axeptio_overlay {
	> * {
		@media screen and (max-width: $break-tablet) {
			transform: translateY(-8rem);
		}
	}
}

